# agentguard

./: .agentguard.yml  .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: welcome.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/sponsors/: README.md
.github/workflows/: ci.yml  codeql.yml  container.yml  dependency-review.yml  release.yml
docs/: ARCHITECTURE.md  GITHUB_SETUP.md  GOOD_FIRST_ISSUES.md  PLUGINS.md  SECURITY_MODEL.md
docs/launch/: COMMUNITIES.md  HACKER_NEWS.md  LINKEDIN.md  REDDIT.md
src/agentguard/: __init__.py  __main__.py  cli.py  config.py  context.py  models.py  plugins.py  reporters.py  scanner.py
src/agentguard/rules/: __init__.py  base.py  code.py  dependencies.py  secrets.py
tests/: conftest.py  test_cli.py  test_config.py  test_plugins.py  test_reporters.py  test_rules.py
